[gd_scene load_steps=8 format=4 uid="uid://dgsujagofbbrk"]

[ext_resource type="Texture2D" uid="uid://jyaive704e5w" path="res://assets/grounds/Sprout Lands - Sprites - Basic pack/Tilesets/Hills.png" id="1_0u55a"]
[ext_resource type="Script" uid="uid://bkqqpy3xgr5tu" path="res://scripts/rooms/content_template/a_template.gd" id="2_eth8c"]
[ext_resource type="Script" uid="uid://dsq4083ojgomo" path="res://scripts/rooms/content_template/marker_component.gd" id="3_1wh2f"]
[ext_resource type="Script" uid="uid://d2fvaykgni5qd" path="res://scripts/data/MarkData.gd" id="4_hrqc6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_41boa"]
texture = ExtResource("1_0u55a")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, -8, 8, 8, 8, 8, 0, 8, -8, 0, -8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, -8, 8, 8, 8, 8, 0, 0, -8, -8, -8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, -8, 8, 8, 8, 8, 0, 4, -8, -4, -8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, -8, 8, 8, 8, 8, 0, 8, -8, 0, -8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, -8, 8, 8, 8, 8, 0, 0, -8, -8, -8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 0, -4, 4, 0, 8, 8, 8, 8, -8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 0, 8, 8, 0, 8, -8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 0, -4, 4, 0, 8, 8, 8, 8, -8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, -4, 8, 4, 8, 4, -4)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 0, -4, 4, 0, 8, 8, 8, 8, -8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 0, 8, 8, 0, 8, -8)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, 0, 8, -8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, -4, 4, 4, 4, 4, -4)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, -4, 4, 4, 4, 4, -4)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, -4, 8, 4, 8, 4, -4)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, -4, 8, 4, 8, 4, -4)
9:6/0 = 0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, -4, 4, 4, 4, 4, -4)
10:6/0 = 0
10:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, -4, 4, 4, 4, 4, -4)

[sub_resource type="TileSet" id="TileSet_5wg0i"]
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 0
sources/1 = SubResource("TileSetAtlasSource_41boa")

[sub_resource type="Resource" id="Resource_11ral"]
script = ExtResource("4_hrqc6")
entity_type = "tree"
size_limit = Vector2i(4, 4)
priority = 1
probability = 1.0
selection_mode = 0
explicit_scene = ""
pair_seed = -1
scene_index = -1
use_exclusive_group = false
exclusive_group = "æ ‘"
subgroup = "1"
group_limit = 10
metadata/_custom_type_script = "uid://d2fvaykgni5qd"

[node name="AHLRoom" type="TileMapLayer"]
z_index = -3
z_as_relative = false
y_sort_enabled = true
texture_filter = 1
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AADx//r/AQADAAEAAADx//n/AQADAAEAAADx//j/AQADAAEAAADx//f/AQADAAEAAADx//b/AQADAAEAAADx//X/AQADAAEAAADx//T/AQADAAEAAADx//P/AQADAAEAAADx//L/AQADAAEAAADx//H/AQADAAEAAAAOAAUAAQADAAEAAAAOAAYAAQADAAEAAAAOAAcAAQADAAEAAAAOAAgAAQADAAEAAAAOAAkAAQADAAEAAAAOAAoAAQADAAEAAAAOAAsAAQADAAEAAAAOAAwAAQADAAEAAAAOAA0AAQADAAEAAAAOAA4AAQADAAEAAAAOAA8AAQAIAAIAAADx//z/AQADAAEAAADx//3/AQADAAEAAADx//v/AQADAAEAAADx//7/AQADAAEAAADx////AQADAAEAAADx/wAAAQADAAEAAADx/wEAAQADAAEAAADx/wIAAQADAAEAAADx/wMAAQADAAEAAADx/wQAAQADAAEAAADx/wUAAQADAAEAAADx/wYAAQADAAEAAADx/wcAAQADAAEAAADx/wgAAQAEAAMAAAAOAAQAAQADAAEAAAAOAAMAAQADAAEAAAAOAAIAAQADAAEAAAAOAAEAAQADAAEAAAAOAP3/AQADAAEAAAAOAPz/AQADAAEAAAAOAP//AQADAAEAAAAOAP7/AQADAAEAAAAOAPv/AQADAAEAAAAOAPr/AQADAAEAAAAOAAAAAQADAAEAAAAOAPj/AQADAAEAAAAOAPn/AQADAAEAAAAOAPf/AQAHAAAAAAANAPf/AQABAAMAAAAMAPf/AQABAAMAAAALAPf/AQABAAMAAAAKAPf/AQABAAMAAAAJAPf/AQABAAMAAAAIAPf/AQABAAMAAAAHAPf/AQABAAMAAAAGAPf/AQABAAMAAAAFAPf/AQABAAMAAAAEAPf/AQABAAMAAAADAPf/AQABAAMAAAACAPf/AQABAAMAAAABAPf/AQABAAMAAAAAAPf/AQABAAMAAAD///f/AQABAAMAAAD+//f/AQABAAMAAAD9//f/AQABAAMAAAD8//f/AQABAAMAAAD7//f/AQABAAMAAAD6//f/AQABAAMAAAD5//f/AQABAAMAAADy/wgAAQABAAMAAADz/wgAAQABAAMAAAD0/wgAAQABAAMAAAD1/wgAAQABAAMAAAD2/wgAAQABAAMAAAD3/wgAAQABAAMAAAD4/wgAAQABAAMAAAD5/wgAAQABAAMAAAD6/wgAAQABAAMAAAD7/wgAAQABAAMAAAD8/wgAAQABAAMAAAD9/wgAAQABAAMAAAD+/wgAAQABAAMAAAD//wgAAQABAAMAAAAAAAgAAQABAAMAAAABAAgAAQABAAMAAAACAAgAAQABAAMAAAADAAgAAQABAAMAAAAEAAgAAQABAAMAAAAFAAgAAQABAAMAAAAGAAgAAQABAAMAAAAHAAgAAQACAAMAAAD4//f/AQAAAAMAAADx//D/AQAIAAEAAAA=")
tile_set = SubResource("TileSet_5wg0i")
script = ExtResource("2_eth8c")

[node name="EntityLayer" type="Node2D" parent="."]
z_as_relative = false
y_sort_enabled = true

[node name="NaturalSpawns" type="Node2D" parent="EntityLayer"]
z_index = 2

[node name="Marker2D" type="Marker2D" parent="EntityLayer/NaturalSpawns"]
z_as_relative = false
position = Vector2(-336, -176)
gizmo_extents = 32.0
script = ExtResource("3_1wh2f")
marker_data = SubResource("Resource_11ral")
metadata/size = Vector2i(1, 1)
metadata/priority = 0
metadata/type = "rock"
metadata/probability = 1.0
metadata/pair_seed = -1
metadata/scene_index = -1
metadata/explicit_scene = ""
metadata/group_limit = 0
metadata/subgroup = ""

[node name="Marker2D2" type="Marker2D" parent="EntityLayer/NaturalSpawns"]
z_as_relative = false
position = Vector2(336, 208)
gizmo_extents = 32.0
script = ExtResource("3_1wh2f")
marker_data = SubResource("Resource_11ral")
metadata/size = Vector2i(1, 1)
metadata/priority = 0
metadata/type = "rock"
metadata/probability = 1.0
metadata/pair_seed = -1
metadata/scene_index = -1
metadata/explicit_scene = ""
metadata/group_limit = 0
metadata/subgroup = ""

[node name="DecoSpawns" type="Node2D" parent="EntityLayer"]
y_sort_enabled = true
